Bug 382298 Forwarded icon not shown up in IMAP account (index issue?). r/sr/a=Standard8